maze.lessons.maze.shortestpath.ShortestPathMaze.scala.error
JediEscaper:18: error: ':' expected but ',' found.
def ecriture(x,y) = {
              ^JediEscaper:42: error: identifier expected but '}' found.
} 
^